bad/method_arg_of_nonexistent_class_array.example_compiler_output
ERROR
[1mbad/method_arg_of_nonexistent_class_array.lat:3:11: [1;31merror: [0;1mUnknown class: list[m
	void foo(list[] x) {}
	         [1;32m^[m
